--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -110,11 +108,56 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+
+.ag-root-wrapper {
+  border-radius: 0px;
+  border-bottom: none;
+}
+
+.ag-cell-focus {
+  border: none !important; 
+}
+
+/* even rows background */
+.ag-row:nth-child(even) {
+  background-color: rgb(248, 248, 248); /* or any color you want */
+}
+
+/* odd rows background */
+.ag-row:nth-child(odd) {
+  background-color: var(--color-card);
+}
+
+
+body {
+  font-family: 'Nunito'
+}
+
+.ag-cell-inline-editing {
+  height: 100% !important;
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+  padding: 0 !important;
+}
+
+.ag-cell-edit-wrapper {
+  border: none!important;
+    height: 100% !important;
+}
+
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border  outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-muted/10 text-foreground;
+  }
+}
+
+@layer components {
+  .ag-cell-inline-editing,
+  .ag-cell-edit {
+    @apply text-primary; /* assuming Tailwind is configured with a `text-primary` */
   }
 }
