--- a/src/index.css
+++ b/src/index.css
@@ -118,14 +118,11 @@
 }
 
 /* even rows background */
-.ag-row:nth-child(even) {
+.ag-row:nth-child(odd) {
   background-color: rgb(248, 248, 248); /* or any color you want */
 }
 
 /* odd rows background */
-.ag-row:nth-child(odd) {
-  background-color: var(--color-card);
-}
 
 body {
   font-family: "Nunito";
@@ -142,6 +139,11 @@ body {
 .ag-cell-edit-wrapper {
   border: none !important;
   height: 100% !important;
+}
+
+.ag-header-row {
+  background-color: oklch(94.158% 0.02414 254.032);
+  color: white;
 }
 
 @layer base {
